Client details unit tests (#149)